# EasySales-Server

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
http/: Cargo.toml
http/src/: common.rs  header.rs  insecure.rs  main.rs  secure.rs
moedb/: Cargo.toml  server-config.toml
moedb/src/: command.rs  common.rs  disk.rs  header.rs  main.rs  manipulator.rs  memory.rs  schema.rs  schema_store.rs  statement.rs  uerr.rs  unix_conn.rs  unix_sock.rs  util.rs
shared/: Cargo.toml
shared/src/: lib.rs  tls.rs  toml_schema.rs  util.rs  validator.rs
socket-test/: Cargo.toml
socket-test/src/: main.rs
tcp/: Cargo.toml
tcp/src/: common.rs  header.rs  insecure.rs  insecure_conn.rs  main.rs  secure.rs  secure_conn.rs
test/: cert.pem  key.pem  server-config.toml
