[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Julfikar <md.julfikar.mahmud@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
log = "0.4.17"
simplelog = "0.12.0"
tokio = { version="1.26.0", features=["full"] }
# local crate
shared = { path="../shared" }