[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-identity = "0.5.2"
actix-web = { version="4.2.1", features=["openssl","rustls"] }
actix-web-httpauth = "0.8.0"
anyhow = "1.0.68"
async-trait = "0.1.64"
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
openssl = "0.10.45"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
simplelog = "0.12.0"
tokio = { version="1.24.2", features=["full"] }
webpki-roots = "0.22"
# local crates
shared = { path="../shared" }