[package]
name = "moedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.64"
bson = { version="2.5.0", features=["chrono-0_4","uuid-0_8","serde_with"] }
rocksdb = { version= "0.20.1", features=["multi-threaded-cf"] }
dashmap = { version = "5.3.4", features = ["serde", "rayon"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
mio = { version = "0.8", features = ["net", "os-poll"] }
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
simplelog = "0.12.0"
thiserror = "1.0.39"
itertools = "0.10.3"
rayon = "1.6.1"
regex = "1.7.1"
tokio = { version="1.24.2", features=["full"] }
# local crates
shared = { path="../shared" }