[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Julfikar <md.julfikar.mahmud@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dirs = "4.0.0"
openssl = "0.10.45"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
toml = "0.7.2"